<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.upc.trackingclient.TrackMapActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_start"
        android:orderInCategory="100"
        android:title="@string/action_start"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_pause"
        android:orderInCategory="100"
        android:title="@string/action_pause_track"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_finish"
        android:orderInCategory="100"
        android:title="@string/action_finish_track"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_note"
        android:orderInCategory="100"
        android:title="@string/action_note_track"
        app:showAsAction="never"/>
    

</menu>
