<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/track_status"
        android:textSize="16sp" 
        android:textColor="@color/wallet_holo_blue_light"/>
    
    <Spinner
        android:id="@+id/spStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/action_start"
        android:entries="@array/status_array" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="16sp"
        android:text="@string/track_description" 
        android:textColor="@color/wallet_holo_blue_light"/>

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</LinearLayout>